Update README.md to enhance Java Memory Model and Garbage Collection sections with detailed explanations and monitoring tools